package domain;

public class Task {
}
