package domain;

import java.util.ArrayList;
import java.util.List;

public class Users {

    public List<User> users = new ArrayList<>();

    public Users() {

    }

    public List<User> getUsers() {
        return users;
    }
}
